:lipstick: Add Chromatic Glitch Effect to Links
Resolve:
 - Make Links stand out more

Change:
 - Add chromatic shift v1 and pulse animation

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,29 +1,44 @@
+@value offWhiteColor, blueColor, greenColor, orangeColor, almostBlackColor, mostAlmostBlackColor from '../styles/colors.css';
+
 :root {
   font-size: 16px;
 }
 
+body {
+  background-color: offWhiteColor;
+}
 
+.HeaderGroup {
+}
 
 .Heading{
-  color: #2D3142;
+  color: almostBlackColor;
+  font-size: 2rem;
 }
 .SubHeading {
-  color: #4F5D75;
+  font-size: 1rem;
+  color: mostAlmostBlackColor;
 }
 .Content {
-  color: #2D3142;
+  color: almostBlackColor;
 }
 
 .Link,
 .Link:visited {
-  color: #4F5D75;
+  color: almostBlackColor;
   margin: .25rem;
 }
 
 .Link:active,
 .Link:hover,
 .Link:focus {
-  color: #EF8354;
+  text-shadow: 3px 2px 2px orangeColor, 0px -1px 3px blueColor,-3px 0px 2px greenColor;
+  animation: chromaticMove 4500ms ease infinite,pulse ease 200ms  infinite;
+}
+
+.LinkWrapper {
+  display: inline-block;
+  width: 50%;
 }
 
 .Wrapper {
@@ -38,4 +53,20 @@
 
 .Footer {
   text-align: center;
+}
+
+@keyframes pulse {
+    0%{ opacity:.9;transform: skewX(.5deg);}
+    25%{ opacity:1;}
+    50%{opacity:.9;}
+    75%{ opacity:1; transform:skewX(.5deg);}
+    100%{opacity:.9;}
+}
+
+@keyframes chromaticMove {
+    0%{text-shadow: 2px 2px 2px orangeColor, 0px -1px 3px blueColor,0px 0px -2px greenColor;}
+    25%{text-shadow: 2px 1px 1px orangeColor, 0px -2px 3px blueColor,-3px 1px -1px greenColor;}
+    50%{text-shadow: 2px 2px 1px orangeColor, 0px -3px 4px blueColor,-3px 0px 0px greenColor;}
+    75%{text-shadow: 2px 1px 1px orangeColor, 0px -2px 3px blueColor,-3px 1px -1px greenColor;}
+    100%{text-shadow: 2px 2px 2px orangeColor, 0px -1px 3px blueColor,2px -1px 2px greenColor;}
 }
